# goldfish-experiments

./: README.md
goldfish/: .gitignore  Cargo.toml  experiments0.sh  experiments1.sh  experiments2.sh  experiments3.sh  experiments4.sh  experiments5.sh
goldfish/experiments/: process-experiment3-A.py  process.py
goldfish/experiments/processed/: dot-experiment0-A-0.0030.txt  dot-experiment0-A.txt  dot-experiment0-B-0.0030.txt  dot-experiment0-B.txt  dot-experiment0-C-0.0030.txt  dot-experiment0-D.txt  dot-experiment1-A-0.0005.txt  dot-experiment1-A-0.00075.txt  dot-experiment1-A-0.001.txt  dot-experiment1-A-0.0025.txt  dot-experiment1-A-0.005.txt  dot-experiment1-A-0.0075.txt  dot-experiment1-A-0.01.txt  dot-experiment1-A-0.025.txt  dot-experiment1-A-0.05.txt  dot-experiment2-A-0.0005.txt  dot-experiment2-A-0.00075.txt  dot-experiment2-A-0.001.txt  dot-experiment2-A-0.0025.txt  dot-experiment2-A-0.005.txt  dot-experiment2-A-0.0075.txt  dot-experiment2-A-0.01.txt  dot-experiment2-A-0.025.txt  dot-experiment2-A-0.05.txt  dot-experiment3-A-0.0002.txt  dot-experiment3-A-0.0004.txt  dot-experiment3-A-0.0006.txt  dot-experiment3-A-0.0008.txt  dot-experiment3-A-0.0010.txt  dot-experiment3-A-0.0012.txt  dot-experiment3-A-0.0014.txt  dot-experiment3-A-0.0016.txt  dot-experiment3-A-0.0018.txt  dot-experiment3-A-0.0020.txt  dot-experiment3-A-0.0025.txt  dot-experiment3-A-0.0035.txt  dot-experiment3-A-0.0050.txt  (+143 more)
goldfish/src/: adversary.rs  ghash.rs  goldfish_blockvote.rs  goldfish_message.rs  goldfish_type.rs  goldfish_validator.rs  lottery.rs  main.rs  network.rs  sig.rs  vrf.rs
